Before_filter解除、デフォルト言語日本語化

--- a/public/assets/css/aribaba.css
+++ b/public/assets/css/aribaba.css
@@ -27,6 +27,11 @@
 {
 	width:300px;
 }
+
+.container-cards table input
+{
+	width:auto;
+}
 .container-cards #card_comment
 {
 	height:200px !important;
